# h-mail

./: .gitignore  Cargo.toml  README.md  cert.pem  cloc.sh  flake.nix  key.pem  package-lock.json
client/: .gitignore  Cargo.toml  README.md
client-tui/: Cargo.toml  README.md
client-tui/src/: blocking_widget.rs  choose_login.rs  login.rs  main.rs
client-ui/: .gitignore  (+13 more)
client-ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client-ui/src-tauri/src/: lib.rs  pow_manager.rs
client-ui/src-tauri/src/communication/: auth.rs  create_account.rs  get_emails.rs  get_foreign_pow_policy.rs  get_hmail_by_hash.rs  get_hmails.rs  get_pow_policy.rs  mod.rs  send_email.rs  send_hmail.rs  set_pow_policy.rs  whitelist_management.rs
client/src/: auth.rs  communication.rs  lib.rs  main.rs  send.rs  state.rs  util.rs
gen-docs/: .gitignore  Cargo.toml  README.md  build.rs  run.txt
gen-docs/docs/: AuthenticateResponse.md  CheckAuthRequest.md  CheckPowRequest.md  CreateAccountPackage.md  Email.md  EmailPackage.md  GetCreateAccountPowPolicyResponse.md  GetEmailsEmail.md  GetPowTokenResponse.md  RefreshAccessResponse.md  SystemTimeField.md
gen-docs/jsonschema-markdown/: test.schema.json
gen-docs/jsonschema-markdown/jsonschema_markdown/: main.py  utils.py
gen-docs/jsonschema-markdown/jsonschema_markdown/converter/: markdown.py
gen-docs/schema/: a.schema.json
gen-docs/schemas/: AuthTokenDataField.schema.json  AuthTokenField.schema.json  AuthenticateRequest.schema.json  AuthenticateResponse.schema.json  BigUintField.schema.json  CheckAuthRequest.schema.json  CheckAuthResponse.schema.json  CheckAuthResponseAuthed.schema.json  CheckPowPackage.schema.json  CheckPowRequest.schema.json  CheckPowResponse.schema.json  CreateAccountPackage.schema.json  CreateAccountRequest.schema.json  CreateAccountResponse.schema.json  DeliverEmailRequest.schema.json  DeliverEmailResponse.schema.json  Email.schema.json  EmailPackage.schema.json  GetCreateAccountPowPolicyRequest.schema.json  GetCreateAccountPowPolicyResponse.schema.json  GetEmailsEmail.schema.json  GetEmailsRequest.schema.json  GetEmailsResponse.schema.json  GetEmailsResponseAuthed.schema.json  GetPowTokenRequest.schema.json  GetPowTokenResponse.schema.json  GetUserPowPolicyRequest.schema.json  GetUserPowPolicyResponse.schema.json  PowClassification.schema.json  PowPolicy.schema.json  RefreshAccessRequest.schema.json  RefreshAccessResponse.schema.json  SendEmailRequest.schema.json  SendEmailResponse.schema.json  SendEmailResponseAuthed.schema.json  SystemTimeField.schema.json  VerifyIpRequest.schema.json  VerifyIpResponse.schema.json
gen-docs/src/: all.rs  main.rs  md.rs
interface/: Cargo.toml  README.md
interface/src/: config.rs  error.rs  lib.rs  reexports.rs  server_config.rs  utility.rs
interface/src/interface/: auth.rs  email.rs  hmail.rs  mod.rs  pow.rs
interface/src/interface/fields/: auth_token.rs  big_uint.rs  hmail_address.rs  mod.rs  system_time.rs
interface/src/interface/routes/: check_pow.rs  get_pow_token.rs  mod.rs
interface/src/interface/routes/auth/: authenticate.rs  check_auth.rs  mod.rs  refresh_access.rs
interface/src/interface/routes/foreign/: deliver_email.rs  deliver_hmail.rs  get_anonymous_user_pow_policy.rs  get_pow_policy_interserver.rs  get_pow_token.rs  get_user_pow_policy.rs  get_user_pow_policy_interserver.rs  is_whitelisted_interserver.rs  mod.rs  verify_ip.rs
interface/src/interface/routes/native/: add_whitelist.rs  create_account.rs  get_create_account_pow_policy.rs  get_emails.rs  get_foreign_pow_policy.rs  get_hmail_by_hash.rs  get_hmails.rs  get_pow_policy.rs  get_user_pow_policy.rs  get_whitelist.rs  is_whitelisted.rs  mod.rs  remove_whitelist.rs  send_email.rs  send_hmail.rs  set_pow_policy.rs
interface/src/shared/: mod.rs
server/: .env  .gitignore  Cargo.toml  README.md  diesel-schema.sh  gen_schema.sh  get_schema.ps1  init_db.ps1  init_db.sh  recreate_db.ps1  recreate_db.sh  start_db.ps1  start_db.sh
server/data/: data.db
server/docs/: TODO.md  User.md
server/docs/.obsidian/: workspace.json
server/docs/Routes/: deliver_email.md
server/migrations/2025-07-30-161611_create_users/: up.sql
server/migrations/2025-07-30-161730_create_emails/: down.sql  up.sql
server/migrations/2025-07-30-161730_create_hmails/: down.sql  up.sql
server/migrations/2025-08-11-120008_create_email_to_map/: down.sql  up.sql
server/migrations/2025-08-11-120008_create_hmail_recipient_map/: down.sql  up.sql
server/migrations/2025-08-11-120008_create_hmail_recipients_map/: up.sql
server/migrations/2025-08-11-120013_create_email_cc_map/: down.sql  up.sql
server/migrations/2025-08-11-120013_create_hmail_cc_map/: down.sql  up.sql
server/migrations/2025-08-11-195726_create_user_whitelists/: down.sql  up.sql
server/src/: args.rs  config.rs  main.rs  shared_resources.rs  test_user.rs
server/src/auth_token_provider/: mod.rs
server/src/config/: args.rs  config_file.rs  mod.rs  salt.rs
server/src/database/: auth.rs  diesel_structs.rs  hmail.rs  mod.rs  pow_policy.rs  schema.rs  user.rs  user_id.rs  whitelist.rs
server/src/database/diesel_interface/: diesel_structs.rs  mod.rs
server/src/pow_provider/: mod.rs
server/src/receiving/: mod.rs
server/src/receiving/auth_util/: auth_header.rs  mod.rs  spf_check.rs  verify_sender_ip.rs
server/src/receiving/routes/: check_pow.rs  mod.rs
server/src/receiving/routes/auth/: authenticate.rs  check_auth.rs  mod.rs  refresh_access.rs
server/src/receiving/routes/foreign/: deliver_email.rs  deliver_hmail.rs  get_anonymous_user_pow_policy.rs  get_pow_token.rs  get_user_pow_policy.rs  get_user_pow_policy_interserver.rs  is_whitelisted_interserver.rs  mod.rs  verify_ip.rs
server/src/root/: config.rs  shared_resources.rs
server/src/root/auth_token_provider/: mod.rs
server/src/root/database/: mod.rs
server/src/root/pow_provider/: mod.rs
server/src/root/receiving/: mod.rs
server/src/sending/: send_post.rs
server/tests/: integration.rs
tests/: .gitignore  Cargo.toml
tests/src/: main.rs
tests/tests/: integration.rs  servers.rs
(+211 files in other folders)
