[package]
name = "h-mail"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
color-print = "0.3.7"
crossbeam = "0.8.4"
ctrlc = "3.4.7"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
itertools = "0.14.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
