[package]
name = "h-mail"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
ctrlc = "3.4.7"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
itertools = "0.14.0"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
rsa = "0.9.8"
rand = "0.8.5"
base64 = "0.22.1"
derive-new = "0.7.0"
sha2 = "0.10.9"
mail-auth = "0.7.1"
color-print = "0.3.7"
hyper = { version = "1.6.0", features = ["full"] }
rustls = "0.23.29"
tokio-rustls = { version = "0.26.2", features = ["tls12"] }
hyper-util = "0.1.16"
tower-service = "0.3.3"
tracing = "0.1.41"
argon2 = "0.5.3"
oauth2 = "5.0.0"
constant_time_eq = "0.4.2"

[features]
default = ["no_spf", "no_salt", "no_rate_limit"]
no_spf = []
no_salt = []
no_rate_limit = []
