[package]
name = "client-tui"
version = "0.1.0"
description = "-"
authors = ["Robert-M-Lucas <100799838+Robert-M-Lucas@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
h-mail-client = { path = "../client" }
crossterm = "0.28.1"
ratatui = "0.29.0"
anyhow = "1.0.98"
derive-new = "0.7.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
tokio = "1.47.0"