[package]
name = "h-mail-client"
version = "0.1.0"
edition = "2024"

[dependencies]
h-mail-interface = { path="../interface" }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["fs", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
