[package]
name = "h-mail-client"
version = "0.1.0"
edition = "2024"

[dependencies]
h-mail-interface = { path="../interface", features = ["client_implementation"] }
reqwest = { version = "0.12.23", features = ["json", "native-tls"] }
tokio = { version = "1.46.1", features = ["fs", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
derive-getters = "0.5.0"
derive-new = "0.7.0"
itertools = "0.14.0"
tracing = "0.1.41"
