[package]
name = "gen-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
schemars = "1.0.4"
serde_json = "1.0.141"
h-mail-interface = { path="../interface", features = ["gen_docs"] }
fs_extra = "1.3.0"
itertools = "0.14.0"
rsa = "0.9.8"


[build-dependencies]
walkdir = "2.5.0"
itertools = "0.14.0"