[package]
name = "h-mail-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
rsa = "0.9.8"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
rand = "0.8.5"
anyhow = "1.0.98"
