[package]
name = "h-mail-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"

rsa = { version = "0.9.8", optional = true }
base64 = { version = "0.22.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
rand = { version = "0.8.5", optional = true }
anyhow = { version = "1.0.98", optional = true }
schemars = { version = "1.0.4", optional = true }

[features]
default = []
gen_docs = [
    "client_interface",
    "dep:schemars",
]
client_interface = []
client_implementation = [
    "client_interface",
    "dep:rsa",
    "dep:base64",
    "dep:sha2",
    "dep:rand",
    "dep:anyhow",
]
server_config = []
