[package]
name = "h-mail-server"
version = "0.1.0"
edition = "2024"

[dependencies]
h-mail-interface = { path="../interface" }
axum = "0.8.4"
ctrlc = "3.4.7"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
itertools = "0.14.0"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
rsa = "0.9.8"
rand = "0.8.5"
mail-auth = "0.7.1"
color-print = "0.3.7"
hyper = { version = "1.6.0", features = ["full"] }
rustls = "0.23.29"
tokio-rustls = { version = "0.26.2", features = ["tls12"] }
hyper-util = "0.1.16"
tower-service = "0.3.3"
tracing = "0.1.41"
argon2 = "0.5.3"
reqwest = { version = "0.12.22", features = ["json"] }
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
derive-new = "0.7.0"

[features]
default = ["no_spf", "no_salt", "no_rate_limit"]
no_spf = []
no_salt = []
no_rate_limit = []

